--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "adrai",
-  "name": "eventstore",
+  "name": "@wtfiwtz/eventstore",
   "version": "1.15.5",
   "contributors": [
     {
@@ -15,7 +15,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git@github.com:adrai/node-eventstore.git"
+    "url": "git@github.com:wtfiwtz/node-eventstore.git"
   },
   "description": "Node-eventstore is a node.js module for multiple databases. It can be very useful as eventstore if you work with (d)ddd, cqrs, eventsourcing, commands and events, etc.",
   "keywords": [
@@ -40,7 +40,7 @@
     "node": ">=0.8.0"
   },
   "dependencies": {
-    "async": "2.6.2",
+    "async": "^2.6.2",
     "debug": "3.1.0",
     "dotty": "0.0.2",
     "jsondate": "0.0.1",
