Switch to private Github Packages registry

--- a/package.json
+++ b/package.json
@@ -63,5 +63,9 @@
   },
   "scripts": {
     "test": "mocha"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/",
+    "access": "private"
   }
 }
